0.102.3
-

0.102.2
- split segments into diffetent categories
- improve hard_5x5_segments

0.102.1
- fix rotation

0.101
- buff invisible blocks (0-0.02 from 0.01-0.05)
- add SISLG and block_silent_trigger

0.100.5
- add drawing decorations when in single layer mode
- add end zone (8 levels so far) and end block

0.100.4
- add events for flash zones
- implement forced_spawn

0.100.3
- add WIP signs to extra zones
- add more events
- add The Maze and Lobby 6
- minor changes to levels

0.100.2
- add more events for the witch

0.100.1
- add 5 levels
- move levels between zones

0.99.5
- review and adjust all log modes used

0.99.4
- make options obligatory if optionable blocks are used
- fix all warnings and errors in existing levels

0.99.3
- refactor log.print to log.write
- remove prints from code

0.99.2
- make window close after runtime exception

0.99.1
- bugfix for direction (pm_jump did not chain)

0.98
- make piston pusher go through useless block
- show messages about state filler errors
- add 5 levels
- fix bug where keys were not logged

0.97
- add text message functionality

0.96.3
- add "TRACE" log level
- changes to logs

0.96.2
- split state_filler_uno_duo into multiple smaller files

0.96.1
- state_filler_uno_duo implemented, and by a better coder than the one who implemented state_filler

0.95.4
- add a few more levels

0.95.3
- reformat code

0.95.2
- replace direction with an enum

0.95.1
- add more levels for moving_arrow zone

0.94.3
- bugfixes for move direction (to be replaced with an enum in future, maybe)

0.94.2
- add an executable!

0.94.1
- fix "game." in imports

0.93.3
- found a bug, currently have no idea how to resolve it. Temporarily removed a type check.

0.93.2
- added proper README.md
- bugfix for falling through ice block
- removed certain inappropriate command

0.93.1
- changed file structure of the project

0.92.1
- minor changes for speedrunning system

0.92
- added animation for disappearing blocks
- added events for zone 209