@@ -1,4 +1,4 @@
-VERSION = "v0.102.2"
+VERSION = "v0.102.3"
 
 FRAME_RATE = 30
 MOVE_LIMIT = 2048
