@@ -10,9 +10,9 @@
 .111.2...333.4.4.
 .................
 ...eeeee.eeeee...
-..e00000000C00...
+..e0000000CC00...
 
 entrances 201/1 201/2 201/3 201/4 201/5 201/6 201/7 201/8 201/9 201/10
 entrances 500/3
-silent_triggers 1
+silent_triggers 1 2
 forced_spawn 10/9/0     # !! remove this eventually
