@@ -1,4 +1,18 @@
-2
+20
+15
 1
-1
-SE
+111..1111111111..111
+1111.1...1111.1.1111
+111111...11111111111
+1.111....1.1111111.1
+11111..111..11111111
+..21.111....11...21.
+..1111.1..11.1...111
+.111111S1111121.1111
+.11....1.11..11.11..
+..1....111111....1..
+..111..111..111..1..
+.1111..111....1.12..
+11111111111...112E..
+111.1.....1...1.....
+11111.....11111.....
