@@ -1,18 +1,18 @@
 20
 15
 1
-11111..111E1111111..
-111.1.111111111111..
-111111111111111111..
-.1111111.1.......1..
-..11111111.......1..
-..1....1111111...111
-.11...11111.11...111
-.1111111111.1.111111
-..111111.1.1211.....
-..21.11111.11.......
-111..111....11.111..
-111..111..1121.1.1..
-11111111111.1.111S11
-...........11.1..1.1
-...........1111..111
+.11............111..
+.1M...11....11.1.1..
+1....12M....M2111S11
+1M1...11....11...1.1
+122..............111
+..1..12222111.......
+.11......2111.......
+.1111....E11..11M11.
+..11112.2211..11111.
+..21.M222.1M.M11111.
+..11M1M.M1..111..221
+1112111..1..111..1M1
+1..1111..11..11....1
+1111.111..1..11..M1.
+.....111..1M.M1..11.
