@@ -68,7 +68,7 @@ P000m0m0m0m000000P
 ..................
 
 ......C0e.........
-......0...........
+......C...........
 P0000000m00000000W
 ..................
 
@@ -85,4 +85,4 @@ bombs 8/0/7/999
 moving_arrows >
 pistons >
 decorations 8/0/10/decoration_1x1_chav/mid/mid
-silent_triggers 1
+silent_triggers 2 1
