@@ -10,6 +10,21 @@ Hint: wchodzenie na którykolwiek piston więcej niż raz nie ma sensu.
 None
 A co tu tak ciemno?
 
+201 7
+None
+Co takiego niezwykłego w tym poziomie?
+Dla zwykłego śmiertelnika nic. Ale dla speedrunnera... Hehehe
+
+201 8
+None
+Ktoś by powiedział że napisanie 600 linii dla dwóch meme poziomów ukrytych za completion praktycznie całej gry w którą i tak nikt nie zagra to szaleństwo.
+Ja to nazywam hobby.
+
+201 9
+None
+Ten level nawet wrzuciłam na youtuba!
+Nie łudź się, jest niepubliczny.
+
 201 10
 None
 xD
