@@ -1,3 +1,10 @@
 500 1
 None
 O nie! To Giszowiec, Kolista! Szybko, uciekaj stąd zanim jakiś dres cię skroi!
+
+500 3
+13 2 12
+No, to chyba fajnie było, nie?
+Nie mam już żadnych innych pomysłów na poziomy, za to mam...
+ciebie dość.
+Żegnaj!
